--- a/rebloom-alpine/Dockerfile
+++ b/rebloom-alpine/Dockerfile
@@ -12,7 +12,7 @@ RUN         cd rebloom-$VERSION && \
 
 ###
 
-FROM        scratch
+FROM        busybox
 
 ENV         VERSION=1.0.0
 ENV         LIBDIR /var/lib/redis/modules
