--- a/rebloom/Dockerfile
+++ b/rebloom/Dockerfile
@@ -12,7 +12,7 @@ RUN         cd rebloom-$VERSION && \
 
 ###
 
-FROM        scratch
+FROM        busybox
 
 ARG         VERSION=1.0.0
 ENV         LIBDIR /var/lib/redis/modules
