Add syslog (incron uses syslog)

--- a/k8s-wttt/Dockerfile
+++ b/k8s-wttt/Dockerfile
@@ -1,4 +1,4 @@
-FROM        alpine:3.7 as builder
+FROM        alpine:3.7 as incron-builder
 
 ARG         VERSION=0.5.12
 
@@ -14,6 +14,15 @@ RUN         apk --no-cache add --virtual .build-deps \
 
 ###
 
+FROM        alpine:3.7 as s6-overlay-builder
+
+ARG         VERSION=1.18.1.5
+
+RUN         mkdir -p /rootfs && \
+            wget -q https://github.com/just-containers/s6-overlay/releases/download/v$VERSION/s6-overlay-amd64.tar.gz -O - | tar xz -C /rootfs && \
+
+###
+
 FROM        allanlei/kubectl as kubectl
 
 ###
@@ -21,13 +30,17 @@ FROM        allanlei/kubectl as kubectl
 FROM        alpine:3.7
 LABEL       maintainer="Allan Lei <allanlei@helveticode.com>"
 
+ENTRYPOINT  ["/init"]
 CMD         ["incrond", "--foreground"]
 
 RUN         apk --no-cache add --virtual .run-deps \
                 libstdc++ \
                 bash
-COPY        --from=builder /usr/local/sbin/ /usr/local/sbin/
-COPY        --from=builder /usr/local/bin/ /usr/local/bin/
-COPY        --from=builder /etc/incron.d/ /etc/incron.d/
-COPY        --from=builder /var/spool/incron/ /var/spool/incron/
+
+COPY        --from=s6-overlay-builder /rootfs/ /
+COPY        --from=incron-builder /usr/local/sbin/ /usr/local/sbin/
+COPY        --from=incron-builder /usr/local/bin/ /usr/local/bin/
+COPY        --from=incron-builder /etc/incron.d/ /etc/incron.d/
+COPY        --from=incron-builder /var/spool/incron/ /var/spool/incron/
 COPY        --from=kubectl /usr/local/bin/ /usr/local/bin/
+COPY        rootfs /
